--- a/danusys-platform/src/main/resources/templates/fragments/inqry/nav.html
+++ b/danusys-platform/src/main/resources/templates/fragments/inqry/nav.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="navFragment">
     <aside class="accordionMenu accordion">
         <ul class="accordion">
             <li id="one" class="on">
                 <a href="#one">이벤트 관리<span>20</span></a>
-                <dl class="sub-menu">
-                    <dd id="event1"><a href="/pages/inqry/event1">스마트 도시 이벤트<span>12</span></a></dd>
-                    <dd id="event2"><a href="/pages/inqry/event2">시설물 장애 이벤트<span>8</span></a></dd>
-                </dl>
+                <ul class="sub-menu">
+                    <li id="event1"><a href="/pages/inqry/event1">스마트 도시 이벤트<span>12</span></a></li>
+                    <li id="event2"><a href="/pages/inqry/event2">시설물 장애 이벤트<span>8</span></a></li>
+                </ul>
             </li>
             <li id="two" class="">
                 <a href="#two">개소 관리<span>26</span></a>
