--- a/danusys-platform/src/main/resources/static/css/board.css
+++ b/danusys-platform/src/main/resources/static/css/board.css
@@ -63,7 +63,7 @@
 
 /* setting */
 .setting{display: flex; height: calc(100% - 60px);}
-.setting_container{flex: 1; display: flex; flex-direction: column; background: #0c0c0d;}
+.setting_container{position: relative; flex: 1; display: flex; flex-direction: column; background: #0c0c0d;}
 .setting_container h4{display: flex; align-items: center; justify-content: flex-start; grid-gap: 8px; height: 60px; padding: 0px 26px; box-sizing: border-box; border-bottom: 1px solid #292c34;}
 .setting_container h4 span{font-size: 16px;}
 .setting_container h4 i{display: flex; align-items: center; justify-content: flex-start; margin: 0px;}
@@ -122,7 +122,7 @@
 .search_table table tbody tr:hover{background: #23252b;}
 .search_table table tbody tr:hover td span.button{background: #434751;}
 .search_table table tbody tr td{vertical-align: middle; text-align: center; font-size: 14px; color: #dee0e4;}
-.search_table table tbody tr td i{margin: 0px auto; cursor: auto;}
+.search_table table tbody tr td i{margin: 0px auto; cursor: pointer;}
 .search_table table tbody tr td i img{max-width: 20px; max-height: 20px; margin: auto;}
 .search_table table tbody tr td i:hover{filter: brightness(1.75);}
 .search_table table tbody tr td span.button{display: inline-block; padding: 6px 14px; color: #7f8491;}
@@ -133,27 +133,30 @@
 .search_table table tbody tr td span.status.green{background: #357d33;}
 .search_table table tbody tr td span.station_type{display: block; width: 36px; height: 36px; margin: auto;}
 .search_table table tbody tr td span.station_type img{width: 100%; height: 100%;}
-.search_table .table_body{height: 100%; overflow: auto; border-bottom: 2px solid #292c34;}
-.search_table .table_bottom{display: flex; align-items: center; justify-content: center; height: 40px; margin: 14px 0px 14px 0px;}
-.search_table .table_bottom .page_nav{flex: 1;  display: flex; align-items: center; justify-content: center; grid-gap: 10px;}
-.search_table .table_bottom .page_nav li{display: flex; align-items: center; justify-content: center; width: 34px; height: 34px; line-height: 32px; text-align: center; font-size: 14px; color: #7f8491; border-radius: 100%; background: #292c34; cursor: pointer;}
-.search_table .table_bottom .page_nav li:hover{color: #dee0e4;}
-.search_table .table_bottom .page_nav li.on{color: #dee0e4; font-weight: bold; background: #3a66e5;}
-.search_table .table_bottom .page_nav li:active{color: #dee0e4; font-weight: bold; background: #3a66e5;}
-.search_table .table_bottom .page_nav li.prev,
-.search_table .table_bottom .page_nav li.next{background: none;}
-.search_table .table_bottom .page_nav li.prev i,
-.search_table .table_bottom .page_nav li.next i{max-width: 20px; max-height: 20px; margin: 0px auto;}
-.search_table .table_bottom .page_nav li.prev i img,
-.search_table .table_bottom .page_nav li.next i img{display: block; width: 20px; height: 20px; margin: 0px auto;}
-.search_table .table_bottom .page_nav li.prev:hover,
-.search_table .table_bottom .page_nav li.next:hover{filter: brightness(1.75);}
-.search_table .table_bottom .button{float: right; display: flex; align-items: center; grid-gap: 6px; height: 34px; line-height: 32px; padding: 0px 14px; color: #7f8491;}
-.search_table .table_bottom .button:hover{color: #dee0e4;}
+.table_bottom{display: flex; align-items: center; justify-content: center; height: 40px; margin: 14px 0px 0px;}
+.table_bottom .page_nav{flex: 1;  display: flex; align-items: center; justify-content: center; grid-gap: 10px;}
+.table_bottom .page_nav li{display: flex; align-items: center; justify-content: center; width: 34px; height: 34px; line-height: 32px; text-align: center; font-size: 14px; color: #7f8491; border-radius: 100%; background: #292c34; cursor: pointer;}
+.table_bottom .page_nav li:hover{color: #dee0e4;}
+.table_bottom .page_nav li.on{color: #dee0e4; font-weight: bold; background: #3a66e5;}
+.table_bottom .page_nav li:active{color: #dee0e4; font-weight: bold; background: #3a66e5;}
+.table_bottom .page_nav li.prev,
+.table_bottom .page_nav li.next{background: none;}
+.table_bottom .page_nav li.prev i,
+.table_bottom .page_nav li.next i{max-width: 20px; max-height: 20px; margin: 0px auto;}
+.table_bottom .page_nav li.prev i img,
+.table_bottom .page_nav li.next i img{display: block; width: 20px; height: 20px; margin: 0px auto;}
+.table_bottom .page_nav li.prev:hover,
+.table_bottom .page_nav li.next:hover{filter: brightness(1.75);}
+.table_bottom .button{float: right; display: flex; align-items: center; grid-gap: 6px; height: 34px; line-height: 32px; padding: 0px 14px; color: #7f8491;}
+.table_bottom .button:hover{color: #dee0e4;}
+
+/* table scroll head fix */
+.search_table .dataTables_wrapper .table_body {overflow: hidden;}
+.search_table .dataTables_wrapper .dataTables_scroll {height: 100%;}
 
 /* inquiry */
 .inquiry{display: flex; height: calc(100% - 60px);}
-.inquiry_container{flex: 1; display: flex; flex-direction: column; background: #0c0c0d;}
+.inquiry_container{position: relative; flex: 1; display: flex; flex-direction: column; background: #0c0c0d;}
 .inquiry_container h4{display: flex; align-items: center; grid-gap: 10px; box-sizing: border-box; height: 60px; padding: 0px 26px; border-bottom: 1px solid #292c34;}
 .inquiry_container h4 i{margin: 0px;}
 .inquiry_container h4 i img{max-width: 20px; max-height: 20px; margin: auto;}
@@ -173,7 +176,7 @@
 
 /* dropdown_checkbox */
 .dropdown_checkbox{min-width: 220px; margin: 0px;}
-.checkbox_title{width: 15.7rem; height: 34px; line-height: 32px; margin: 0px; padding: 0px 14px; color: #dee0e4; font-size: 14px; box-sizing: border-box; border: 1px solid #292c34; border-radius: 3px; background: url("../images/default/arrowSelectBox.svg") 194px center no-repeat #1a1b1d; background-size: 14px; cursor: pointer; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; padding-right: 2rem;}
+.checkbox_title{width: 100%; height: 34px; line-height: 32px; margin: 0px; padding: 0px 14px; color: #dee0e4; font-size: 14px; box-sizing: border-box; border: 1px solid #292c34; border-radius: 3px; background: url("../images/default/arrowSelectBox.svg") 194px center no-repeat #1a1b1d; background-size: 14px; cursor: pointer;}
 .checkbox_list{position: absolute; top: 34px; display: none; overflow: auto; width: 360px; min-height: 86px; max-height: 140px; z-index: 1; margin: -1px 0px 0px 0px; padding:10px 14px; box-sizing: border-box; border-bottom-left-radius: 4px; border-bottom-right-radius: 4px; border: 1px solid #292c34; background: #1a1b1d;}
 .checkbox_list li{display: flex; align-items: center; justify-content: flex-start; grid-gap: 12px; line-height: 28px; padding: 4px 0px; color: #dee0e4;}
 .checkbox_list li > span{flex: 1;}
@@ -248,8 +251,8 @@
 .search_table .dataTables_wrapper .tableBody{flex: 1;}
 
 /* popup */
-.popup{position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); overflow: hidden; display: none; flex-direction: column; width: 860px; border-radius: 10px; box-shadow: 0px 0px 20px rgba(0,0,0,0.5); background: #1e1f23;}
-.popup .title{display: flex; align-items: center; justify-content: space-between; height: 60px; padding: 0px 20px; box-sizing: border-box; border-bottom: 2px solid #292c34;}
+.popup{position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); overflow: hidden; display: none; flex-direction: column; width: 860px; max-height: 820px; border-radius: 10px; box-shadow: 0px 0px 20px rgba(0,0,0,0.5); background: #1e1f23;}
+.popup .title{display: flex; align-items: center; justify-content: space-between; height: 60px; min-height: 60px; max-height: 60px; padding: 0px 20px; box-sizing: border-box; border-bottom: 2px solid #292c34;}
 .popup .title dt{font-size: 16px;}
 .popup .title dd{cursor: pointer;}
 .popup .title dd i{width: 20px; height: 20px;}
@@ -257,6 +260,10 @@
 .popup div.popup_writing fieldset{flex: 1; display: flex; flex-direction: column; margin: 10px 20px 0px; padding: 0px 0px 20px; border-bottom: 1px solid #292c34;}
 .popup div.popup_writing fieldset legend{display: flex; align-items: center; flex-direction: row-reverse; height: 40px; font-size: 16px;}
 .popup div.popup_writing fieldset legend::after{content: ''; width: 4px; height: 4px; margin: 0px 8px 0px 0px; background: #434751;}
+.popup div.list_search p.legend{display: flex; align-items: center; height: 40px; min-height: 40px; max-height: 40px; margin: 0px 0px 10px; font-size: 16px;}
+.popup div.list_search p.legend::before{content: ''; width: 4px; height: 4px; margin: 0px 8px 0px 0px; background: #434751;}
+.popup div.list_search p.legend span{margin-left: auto;}
+.popup div.list_search p.legend span input{flex: 0.3; background: url(../images/default/search.svg) 94% center no-repeat; background-size:20px 20px;}
 .popup div.popup_writing fieldset form{display: flex; flex-direction: column; grid-gap: 10px;}
 .popup div.popup_writing fieldset form dl{flex: 1; overflow: hidden; display: flex; align-items: baseline; justify-content: space-between; grid-gap: 10px; padding: 0px 10px; box-sizing: border-box;}
 .popup div.popup_writing fieldset form dl dt{width: 110px; min-width: 110px; max-width: 110px;}
@@ -268,22 +275,51 @@
 .popup div.popup_writing fieldset form dl dd .fileBox .uploadName{width: 78%; height: 40px; padding: 0px 10px; vertical-align: middle; border: 1px solid #292c34; color: #999999;}
 .popup div.popup_writing fieldset form dl dd .fileBox label{height: 40px; line-height: 38px; padding: 0px 14px; background: #2b2f3a; border-radius: 4px; cursor: pointer;}
 .popup div.popup_writing fieldset form dl dd .fileBox input[type="file"]{position: absolute; overflow: hidden; width: 0; height: 0; padding: 0; border: 0;}
+.popup div.popup_writing fieldset form dl dd span.button{height: 34px; color: #797d87;}
+.popup div.popup_writing fieldset form dl dd span.button:hover{color: #dee0e4;}
+.popup div.popup_writing fieldset form dl.checkbox{align-items: center;}
+.popup div.popup_writing fieldset form dl.checkbox dd{justify-content: flex-start; grid-gap: 20px;}
+.popup div.popup_writing fieldset form dl.checkbox dd > span{flex: 0.3;}
+.popup div.popup_writing fieldset form dl.checkbox dd > span input[type="checkbox"] + label{line-height: 34px;}
+.popup div > .half_layout{display: flex; flex-direction: row; margin: 10px 20px 0px; padding: 0px 0px 20px; border-bottom: 1px solid #292c34;}
+.popup div > .half_layout fieldset{border: none;}
+.popup div > .half_layout .list_search{border: none;}
+.popup div > .half_layout fieldset form{flex: 1;}
+.popup div > .half_layout fieldset form dl{overflow: inherit; flex: initial;}
+.popup div > .half_layout fieldset form dl:nth-child(2){flex: 1;}
+.popup div > .half_layout fieldset form dl dd{height: 100%;}
+.popup div > .half_layout fieldset form dl dd textarea{height: 100%;}
+.popup div > .half_layout fieldset form dl.checkbox dd > span{flex: 1;}
 .popup .bottom {display: flex; align-items: center; justify-content: center; grid-gap: 8px; padding: 14px 10px;}
 .popup .bottom li{height: 34px; line-height: 32px; padding: 0px 18px; font-size: 14px; color: #7f8491; border-radius: 4px; background: #292c34; cursor: pointer;}
 .popup .bottom li:hover{color: #dee0e4;}
 .popup .bottom li.color{color: #b1bcdc; background: #2e53bc;}
 .popup .bottom li.color:hover{color: #dee0e4; background: #3a66e5;}
-.popup div.list_search{margin: 0px 20px; padding: 20px 10px; border-bottom: 2px solid #292c34;}
+.popup div.list_search{overflow: hidden; box-sizing: border-box; margin: 0px 20px; padding: 20px 10px; border-bottom: 2px solid #292c34;}
 .popup div.list_search .search_form{display: flex; align-items: center; justify-content: center; grid-gap: 20px; margin: 10px 0px 20px;}
 .popup div.list_search .search_form dt{}
 .popup div.list_search .search_form dd{flex: 1;}
 .popup div.list_search .search_form dd input{background: url(../images/default/search.svg) 98% center no-repeat; background-size: 20px 20px;}
-.popup div.list_search .list_table{overflow: auto; flex: 1; height: 480px; min-height: 480px; max-height: 480px; border: 1px solid #292c34;}
+.popup div.list_search .list_table{overflow: auto; flex: 1; border: 1px solid #292c34;}
 .popup div.list_search .list_table table{width: 100%;}
 .popup div.list_search .list_table table thead tr{height: 40px; box-sizing: border-box; border-bottom: 2px solid #292c34;}
 .popup div.list_search .list_table table thead tr th{vertical-align: middle; font-size: 14px; color: #797d87; font-weight: bold;}
 .popup div.list_search .list_table table tbody tr{height: 50px; border-bottom: 1px solid #292c34; box-sizing: border-box; background-color: transparent;}
 .popup div.list_search .list_table table tbody tr:hover{background: #23252b;}
 .popup div.list_search .list_table table tbody td{vertical-align: middle; text-align: center; font-size: 14px; color: #dee0e4;}
-/* table scroll head fix */
-.search_table .dataTables_wrapper .dataTables_scroll {height: 100%;}
+.popup div.list_search .list_table table tbody td span{display: inline-block;}
+.popup div.list_search .list_table table tbody td input[type="checkbox"] + label span{margin: 0px;}
+.popup div.list_search .list_table.table_authorize thead tr:nth-child(1) th:nth-child(1){border-right: 2px solid #292c34;}
+.popup div.list_search .list_table.table_authorize tbody tr td:nth-child(1){border-right: 2px solid #292c34;}
+.popup div.list_search .list_table table tbody td span input[type="radio"] + label,
+.popup div.list_search .list_table table tbody td span input[type="radio"] + label span{margin: 0px; padding: 0px;}
+
+
+
+
+
+
+
+
+
+
