--- a/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
@@ -48,7 +48,7 @@
                         <dd><span class="count">123</span>건</dd>
                     </dl>
                     <ul>
-                        <li><i><img src="/images/default/add.svg"></i>사용자 계정 추가</li>
+                        <li id="addUserAccountBtn"><i><img src="/images/default/add.svg"></i>사용자 계정 추가</li>
                     </ul>
                 </div>
                 <div class="search_table">
@@ -68,6 +68,115 @@
                     </table>
                 </div>
             </article>
+
+            <!-- 사용자 계정 팝업 -->
+            <div class="popup" id="userAccountPopup">
+                <dl class="title">
+                    <dt></dt>
+                    <dd><i><img src="/images/default/close.svg"></i></dd>
+                </dl>
+                <div class="popup_writing">
+                    <fieldset>
+                        <legend>사용자 정보</legend>
+                        <form id="userAccountForm">
+                            <dl>
+                                <dt>ID</dt>
+                                <dd><input type="text" id="userId" placeholder="*필수 입력"><span class="button">중복 확인</span></dd>
+                            </dl>
+                            <dl>
+                                <dt>비밀번호</dt>
+                                <dd><input type="password" placeholder="*필수 입력"></dd>
+                            </dl>
+                            <dl>
+                                <dt>비밀번호 확인</dt>
+                                <dd><input type="password" placeholder="*필수 입력"></dd>
+                            </dl>
+                            <dl>
+                                <dt>이름</dt>
+                                <dd><input type="text" id="userName" placeholder="*필수 입력"></dd>
+                            </dl>
+                            <dl>
+                                <dt>전화번호</dt>
+                                <dd><input type="text" id="tel" placeholder="*필수 입력"></dd>
+                            </dl>
+                            <dl>
+                                <dt>이메일</dt>
+                                <dd><input type="text" id="email" placeholder="*필수 입력"></dd>
+                            </dl>
+                            <dl class="checkbox">
+                                <dt>계정 상태</dt>
+                                <dd>
+                                    <span>
+                                        <input type="checkbox" id="accountState01" name="status" value="2">
+                                        <label for="accountState01"><span></span>정상</label>
+                                    </span>
+                                    <span>
+                                        <input type="checkbox" id="accountState02" name="status">
+                                        <label for="accountState02"><span></span>사용 안함</label>
+                                    </span>
+                                </dd>
+                            </dl>
+                        </form>
+                    </fieldset>
+                    <div class="list_search">
+                        <p class="legend">소속 그룹</p>
+                        <div class="list_table">
+                            <table>
+                                <thead>
+                                <tr>
+                                    <th>Index</th>
+                                    <th>그룹 이름</th>
+                                    <th>설명</th>
+                                    <th>선택</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td>1</td>
+                                    <td>그룹 이름</td>
+                                    <td>설명</td>
+                                    <td>
+                                            <span>
+                                                <input type="checkbox" id="group01" name="">
+                                                <label for="group01"><span></span></label>
+                                            </span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td>그룹 이름</td>
+                                    <td>설명</td>
+                                    <td>
+                                            <span>
+                                                <input type="checkbox" id="group02" name="">
+                                                <label for="group02"><span></span></label>
+                                            </span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td>관리자</td>
+                                    <td>관리자 그룹</td>
+                                    <td>
+                                            <span>
+                                                <input type="checkbox" id="group03" name="">
+                                                <label for="group03"><span></span></label>
+                                            </span>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <ul class="bottom">
+                    <!--<li>취소</li>
+                    <li class="color">추가</li>-->
+                    <li data-mode="mod" id="delUserAccountProcBtn">삭제</li>
+                    <li data-mode="mod" id="modUserAccountProcBtn">정보 수정</li>
+                    <li class="color" data-mode="add" id="addUserAccountProcBtn">등록</li>
+                </ul>
+            </div>
         </section>
     </th:block>
 </html>
